Lagt inn bilder og delt opp i overskrifter

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,14 @@ main article p{
 }
 /**SLUTT**/
 
+/**CSS FOR ANALYSESIDEN**/
+
+.analyse{
+    font-size: 1rem;
+}
+
+/**SLUTT**/
+
 /**FLEX FOOTER**/
 footer{
     display: flex;
