--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,16 @@ main article p{
     font-size: 1rem;
 }
 
+table, th, td{
+    border: 1px solid;
+    background-color: white;
+}
+
+table{
+    border-collapse: collapse;
+    width: 100%;
+}
+
 /**SLUTT**/
 
 /**FLEX FOOTER**/
