--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ header{
     font-size: 1rem;
     font-weight: 500;
     grid-area: header;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 header nav{
@@ -35,23 +37,31 @@ header nav{
     text-align: center;
 }
 
-header nav ul li{
-    display: inline;
-}
-
 /**Denne styrer linkene**/
 a{
     text-decoration: none;
     color: black;
-}
 
+}
+/**OBS Denne fucka hamburger menyen**/
 header nav ul{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+    align-items: stretch;
     padding-left: 0;
 }
 
 /**Denne styrer listene i headeren**/
 header nav ul li{
+    display: inline;
     list-style: none;
+}
+
+header nav ul li a{
+    padding: 25px;
+    margin: -25px;
 }
 
 .navbar li{
