--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,15 @@ main h1{
 
 #search{
     padding: 10px;
+    margin-top: 40px;
     text-align: center;
     font-size: 1rem;
 }
 
 .searchbar{
     font-size: 1rem;
+    margin-top: 5px;
+    text-align: center;
 }
 
 main h2{
