--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,14 @@ a{
 /**SLUTT**/
 
 /**HOVEDINNHOLD**/
+
+.skip{
+    background-color: rgb(183, 194, 194);
+    padding: 10px;
+    border-radius: 5px;
+    width: fit-content;
+}
+
 main h1{
     text-align: center;
     font-size: 1.5rem;
@@ -229,7 +237,7 @@ footer h4{
 }
 /**SLUTT**/
 
-/**DESKTOP**/
+/**DESKTOP, legg til en width: fit content på .knapper**/
 @media only screen and (min-width:600px){
 
     main section article figure figcaption p{
